--- a/config.json
+++ b/config.json
@@ -6,15 +6,15 @@
       "name": "OK资源"
     },  
  "guangsu": {
-      "api": " https://api.guangsuapi.com/api.php/provide/vod/josn ",
+      "api": "https://api.guangsuapi.com/api.php/provide/vod/josn",
       "name": "光速资源"
     },  
      "kuaiche": {
-      "api": " https://caiji.kczyapi.com/api.php/provide/vod/?ac=list",
+      "api": "https://caiji.kczyapi.com/api.php/provide/vod/?ac=list",
       "name": "快车资源"
     },  
       "taopian": {
-      "api": "   https://taopianapi.com/cjapi/mc10/vod/json.html",
+      "api": "https://taopianapi.com/cjapi/mc10/vod/json.html",
       "name": "淘片资源"
     },  
  "uku": {
@@ -35,16 +35,15 @@
       "name": "红牛资源"
     }, 
 "yayazy": {
-      "api": "https://cj2.yayazy.net/api.php/provide/vod/?ac=list",
+      "api": "https://cj2.yayazy.net/api.php/provide/vod",
       "name": "鸭鸭资源"
     }, 
   "yzzy": {
-      "api": "https://api.yzzy-api.com/inc/apijson.php?ac=list",
-      "name": "优质资源",
-      "detail": "https://api.yzzy-api.com/inc/apijson.php?ac=detail"
+      "api": "https://api.yzzy-api.com/inc/apijson.php",
+      "name": "优质资源"
     },
  "suoni": {
-      "api": "https://suoniapi.com/api.php/provide/vod/?ac=list",
+      "api": "https://suoniapi.com/api.php/provide/vod",
       "name": "索尼资源"
     }, 
  "jyzy": {
@@ -52,9 +51,8 @@
       "name": "金鹰资源"
     }, 
 "lzizy": {
-      "api": "https://cj.lziapi.com/api.php/provide/vod/?ac=list",
-      "name": "量子资源",
-      "detail": "https://cj.lziapi.com/api.php/provide/vod/?ac=detail"
+      "api": "https://cj.lziapi.com/api.php/provide/vod",
+      "name": "量子资源"
     },
 "dyttzy": {
       "api": "http://caiji.dyttzyapi.com/api.php/provide/vod",
